# blueticks-python

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/blueticks/: __init__.py  _base_resource.py  _client.py  _errors.py  _transport.py  webhooks.py
src/blueticks/resources/: __init__.py  account.py  audiences.py  campaigns.py  chats.py  contacts.py  engines.py  groups.py  messages.py  ping.py  scheduled_messages.py  utils.py  webhooks.py
src/blueticks/types/: __init__.py  _deleted_resource.py  account.py  audiences.py  campaigns.py  chats.py  contacts.py  engines.py  groups.py  messages.py  page.py  ping.py  scheduled_messages.py  utils.py  webhooks.py
tests/: conftest.py  test_account.py  test_audiences.py  test_campaigns.py  test_chats.py  test_client.py  test_errors.py  test_groups.py  test_messages.py  test_ping.py  test_scheduled_messages.py  test_transport.py  test_types.py  test_webhook_verify.py  test_webhooks_resource.py
