[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blueticks"
dynamic = ["version"]
description = "Official Python client for the Blueticks API."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Blueticks", email = "support@blueticks.co" }]
keywords = ["blueticks", "whatsapp", "api", "sdk"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx>=0.27,<1.0",
  "pydantic>=2.6,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-httpx>=0.30",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.urls]
Homepage = "https://blueticks.co"
Documentation = "https://docs.blueticks.co"
Source = "https://github.com/serenix-com/blueticks-python"
Changelog = "https://github.com/serenix-com/blueticks-python/blob/main/CHANGELOG.md"

[tool.setuptools.dynamic]
version = { attr = "blueticks._version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
blueticks = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true
files = ["src/blueticks"]
